option('build-plugins', type : 'boolean', value : true, description : 'Build plugins')
option('build-devel', type : 'boolean', value : true, description : 'Build the development package')
option('build-tests', type : 'boolean', value : true, description : 'Build tests')
option('build-examples', type : 'boolean', value : true, description : 'Build examples')
